@@ -36,7 +36,7 @@ public:
 
 #ifdef __WXMAC__
     /// Respond to Apple Event for opening a document
-    virtual void MacOpenFile(const wxString& filename);
+    virtual void MacOpenFiles(const wxArrayString& fileNames);
 #endif
 
     /// Prompt the user for a book to open
