@@ -459,6 +459,7 @@ OSX:
 - Implement wxFileType::GetOpenCommand().
 - wxGetOsVersion() now returns more sensible version numbers, e.g. 10 and 6
   for OS X 10.6.
+- Added wxApp::MacOpenFiles and deprecated wxApp::MacOpenFile.
 
 GTK:
 
